<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp16"
        tools:context=".imagedetails.ImageDetailsActivity">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />



        <ImageView
            android:layout_width="@dimen/dp256"
            android:layout_height="@dimen/dp256"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/image"
            android:contentDescription="@string/image" />


        <LinearLayout
            android:id="@+id/titleLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp32"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/image">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/title" />

            <TextView
                android:id="@+id/imageTitleTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:gravity="end"
                android:hint="@string/n_a" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/descLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/titleLyt">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/desc" />

            <TextView
                android:id="@+id/imageDescTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:gravity="end"
                android:hint="@string/n_a" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/descLyt">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/date" />

            <TextView
                android:id="@+id/imageDateTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:gravity="end"
                android:hint="@string/n_a" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewsLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/dateLyt">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/views" />

            <TextView
                android:id="@+id/imageViewsTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:gravity="end"
                android:hint="@string/n_a" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>